# qwq_booknotes

./: .gitignore  CMakeLists.txt  __PRETTY_FUNCTION__.md  cookbook.cpp  gl_main.cpp  item.hpp  main.cpp  max.hpp  message.cpp  message.h  neverNo.md  optional.hpp  qwq_big_num.hpp  qwq_main.cpp  qwq_nullptr_t.hpp  qwq_sort.hpp  stack.hpp  stack_except.cpp  stack_except.h  string.cpp  string.h  tmpt.cpp
STL/allocator/: allocator_sub.cpp  allocator_sub.h
booknotes/: Optional_exp.md  decltype.md  friend_function_overload.md  furier_tranform.md  nullptr_t&nullptr.md  operator_function.md  prac.md  structureds_binding.md  types.md
booknotes/CMake_Cookbook/: CMake_Cookbook.md
booknotes/template/: C++_Template.md  template_skills.md
stack/: CMakeLists.txt
template_stl/stack/: stack.h
